[gd_scene load_steps=6 format=3 uid="uid://b17cvdm7dg0oi"]

[ext_resource type="Script" path="res://main.gd" id="1_ckkv2"]
[ext_resource type="PackedScene" uid="uid://4k7y20exgm2" path="res://words.tscn" id="2_7shrq"]
[ext_resource type="PackedScene" uid="uid://bqqhlbuy8y6mg" path="res://hud.tscn" id="3_4lcy2"]
[ext_resource type="PackedScene" uid="uid://wkeoifo22m7a" path="res://letter_button.tscn" id="4_fgs82"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smbn0"]
bg_color = Color(0.415686, 0.4, 0.639216, 1)

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ckkv2")

[node name="background" type="Panel" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 634.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_smbn0")

[node name="words" parent="." instance=ExtResource("2_7shrq")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = 336.0
offset_top = 130.0
offset_right = 336.0
offset_bottom = 130.0
grow_vertical = 1
scale = Vector2(1.2, 1.2)

[node name="hud" parent="." instance=ExtResource("3_4lcy2")]
z_index = 4
layout_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="timerThing" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="letters" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 164.0
offset_right = 1285.0
offset_bottom = 1464.0
scale = Vector2(0.5, 0.5)

[node name="C" type="Control" parent="letters"]
layout_mode = 2

[node name="special_char" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="backspace" parent="special_char" instance=ExtResource("4_fgs82")]
layout_mode = 0
offset_left = 25.0
offset_top = 825.0
offset_right = 845.0
offset_bottom = 1000.0
scale = Vector2(0.5, 0.5)
letter = "Backspace"
offset = 40

[node name="enter" parent="special_char" instance=ExtResource("4_fgs82")]
layout_mode = 0
offset_left = 445.0
offset_top = 825.0
offset_right = 845.0
offset_bottom = 1000.0
scale = Vector2(0.5, 0.5)
letter = "Enter"

[connection signal="submit" from="words" to="." method="submit"]
[connection signal="reset" from="hud" to="." method="reset"]
[connection signal="timeout" from="timerThing" to="." method="scuffed_fix"]
[connection signal="letter_pressed" from="special_char/backspace" to="." method="on_alt_letter_press"]
[connection signal="letter_pressed" from="special_char/enter" to="." method="on_alt_letter_press"]
